Propagate shipping contact update errors https://bugs.webkit.org/show_bug.cgi?id=170141 rdar://problem/31276576

Reviewed by Tim Horton.

* Modules/applepay/ApplePaySession.cpp:
(WebCore::convertAndValidate):

Canonical link: https://commits.webkit.org/187055@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214430 268f45cc-cd09-0410-ab3c-d52691b4dbfc